app-k8s-resources/app/notUsed/ingress-old.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-lb
  # annotations:
  #   alb.ingress.kubernetes.io/scheme: internet-facing
  #   kubernetes.io/ingress.class: alb
  #   alb.ingress.kubernetes.io/target-type: 'ip'
  #   alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
  #   alb.ingress.kubernetes.io/healthcheck-port: traffic-port
  #   alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
  #   alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
  #   alb.ingress.kubernetes.io/success-codes: '200'
  #   alb.ingress.kubernetes.io/healthy-threshold-count: '2'
  #   alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  # ingressClassName: alb
  rules:
  - http:
      paths:
      # - path: /
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: svc-vote
      #       port:
      #         number: 80      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-result
            port:
              number: 80
